# digikamflowplugin

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .tasks  CMakeLists.txt  README.md  bootstrap.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  PicDialog.cpp  PicDialog.hpp  PicFlowView.cpp  PicFlowView.h  PicFlowView.hpp  aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.hpp  flowplugin.cpp  flowplugin.hpp  picdialog.cpp  picdialog.hpp  plugflow.cpp  plugflow.hpp  plugsettings.cpp  plugsettings.hpp
src/FlowLayout/: CMakeLists.txt  flowlayout.cpp  flowlayout.h
